nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service3
spec:
  type: NodePort
  selector:
    app: web-app 
  ports:
    - port: 9090
      targetPort: 9090
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30003
