ingress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
  labels:
    app: spring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - name: spring
        image: sambit1996/docker
        ports:
        - containerPort: 9090

---

apiVersion: v1
kind: Service
metadata:
  name: my-web-s1
spec:
  type: NodePort
  selector:
    app: spring
  ports:
    - port: 9090
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 9090
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30016
---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: my-web-s1
            port:
              number: 9090
